<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatsOn</string>
    <string name="action_settings">Settings</string>
    <string name="user">Usuario registrado</string>
    <string name="guest">Entrar sin registrar</string>
    <string name="announcer">Anunciante</string>
    <string name="admin">Administrador</string>
    <string name="register">Registrarse</string>
    <string name="access">Acceder</string>
    <string name="about">Acerca de</string>
    <string name="aboutText">WhatsOn es una aplicación cuyo objetivo es poder informar a los usuarios de las ofertas de su ciudad. Dichas ofertas son publicadas por los propietarios de los negocios ofertantes. Esta aplicación es un medio de comunicación entre ofertante y posibles clientes.</string>
    <string name="exit">Salir</string>
    <string name="back">Atrás</string>
    <string name="userlogin">Login Usuario</string>
    <string name="usuario">Usuario</string>
    <string name="usuarios">Lista de Usuarios</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="announcerlogin">Login Anunciante</string>
    <string name="passwordagain">Vuelva a escribir la contraseña</string>
    <string name="createUser">Crear Usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="userType">Tipo de usuario</string>
    <string name="nombre">Nombre:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="direccion">Direccion:</string>
    <string name="activa">Activa en este momento:</string>
    <string name="marcarfavorita">Marcar Oferta Favorita</string>
    <string name="desmarcarfavorita">Desmarcar Oferta Favorita</string>
    <string name="noFavourites">No hay ofertas Favoritas</string>
    <string name="noSales">No hay ofertas</string>
    <string name="announcerMenu">Menu Anunciante</string>
    <string name="verOfertas">Ver Ofertas</string>
    <string name="crearOferta">Crear Oferta</string>
    <string name="crearCategoria">Crear Categoria</string>
    <string name="categoria">Categoria</string>
    <string name="categorias">Categorias</string>
    <string name="noCategories">No hay categorias</string>
    <string name="ofertasPublicadas">Ofertas Publicadas</string>
    <string name="saveChanges">Guardar Cambios</string>
    <string name="favourites">Favoritas</string>
    <string name="modificarOferta">Modificar Oferta</string>
    <string name="borrarOferta">Borrar Oferta</string>
    <string name="confirmarBorrar">¿Está seguro de que quiere borrar la oferta?</string>
    <string name="confirmarBorrarUsuario">¿Está seguro de que quiere borrar el usuario?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="verAnunciantes">Ver Anunciantes</string>
    <string name="verUsuarios">Ver Usuarios</string>
    <string name="verCategorias">Ver Categorias</string>
    <string name="adminMenu">Menu Admin</string>
    <string name="noUsers">No hay usuarios</string>
    <string name="nickname">Nombre de Usuario</string>
    <string name="borrarUsuario">Borrar Usuario</string>
    <string name="ip">192.168.137.203</string>

    <string-array name="selectUser">
        <item>Usuario</item>
        <item>Anunciante</item>
    </string-array>
    <string-array name="activas">
        <item>Si</item>
        <item>No</item>
    </string-array>

</resources>