<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/access"
        android:textColor="#00ffff"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/ButtonUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user" />

    <Button
        android:id="@+id/ButtonGuest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/guest" />

    <Button
        android:id="@+id/ButtonAnnouncer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/announcer" />

    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>