<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Index" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#00ffff"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/ButtonAccess"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/access" />

    <Button
        android:id="@+id/ButtonAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <Button
        android:id="@+id/ButtonExit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>