<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center|left"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/TextUser2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/Nickname"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nickname"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/NewNickname"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" >
        </TextView>
    </TableRow>

    <TableRow
        android:id="@+id/borrarRow20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/borrarUsuario"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/borrarUsuario" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/Cancelar2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel" />
    </TableRow>

</TableLayout>